--- a/po/mk/kfax.po
+++ b/po/mk/kfax.po
@@ -4,345 +4,430 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: kdeutils\n"
-"POT-Creation-Date: 1998-10-13 13:31+0200\n"
+"POT-Creation-Date: 1998-10-30 12:34+0100\n"
 "PO-Revision-Date: 1998-10-17 20:00+0100\n"
 "Last-Translator: Neno Kolonic <kolonic@yahoo.com>\n"
-"Language-Team: Macedonian"
-"MIME-Version: 1.0\n"
+"Language-Team: MacedonianMIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=iso-8859-5\n"
 "Content-Transfer-Encoding: 8bit\n"
 
+# kfax.cpp:233 kfax.cpp:828
 #: kfax.cpp:233 kfax.cpp:828
 msgid "Show &Tool Bar"
 msgstr "Pokazi ja &gredata so alatkite"
 
+# kfax.cpp:235 kfax.cpp:821
 #: kfax.cpp:235 kfax.cpp:821
 msgid "Hide &Tool Bar"
 msgstr "Sokri ja &gredata so alatkite"
 
+# kfax.cpp:238 kfax.cpp:801
 #: kfax.cpp:238 kfax.cpp:801
 msgid "Show &Status Bar"
 msgstr "Pokazi &pozicija"
 
+# kfax.cpp:240 kfax.cpp:794
 #: kfax.cpp:240 kfax.cpp:794
 msgid "Hide &Status Bar"
 msgstr "Sokri ja &gredata so alatkite"
 
+# kfax.cpp:403
 #: kfax.cpp:403
 msgid "Help page"
 msgstr "Stranica za pomosh"
 
+# kfax.cpp:405
 #: kfax.cpp:405
 msgid "&Open Fax..."
 msgstr "&Otvori go faxot..."
 
+# kfax.cpp:406
 #: kfax.cpp:406
 msgid "&Add Fax..."
 msgstr "&Dodadi go faxot..."
 
+# kfax.cpp:409
 #: kfax.cpp:409
 msgid "Open &URL..."
 msgstr "Otvori go &URL-ot"
 
+# kfax.cpp:410
 #: kfax.cpp:410
 msgid "Save to U&RL..."
 msgstr "Memoriraj do &URL-ot"
 
+# kfax.cpp:411
 #: kfax.cpp:411
 msgid "&Close Fax"
 msgstr "&Zatvori go faxot"
 
+# kfax.cpp:418
 #: kfax.cpp:418
 msgid "&Next Page"
 msgstr "&Sledna stranica"
 
+# kfax.cpp:419
 #: kfax.cpp:419
 msgid "&Prev Page"
 msgstr "&Predhodna stranica"
 
+# kfax.cpp:420
 #: kfax.cpp:420
 msgid "&First Page"
 msgstr "&Prva stranica"
 
+# kfax.cpp:421
 #: kfax.cpp:421
 msgid "&Last Page"
 msgstr "&Posledna stranica"
 
+# kfax.cpp:423
 #: kfax.cpp:423
 msgid "&Rotate Page"
 msgstr "&Rotiraj ja stranicata"
 
+# kfax.cpp:424
 #: kfax.cpp:424
 msgid "&Mirror Page"
 msgstr "&Reflektirana stranica"
 
+# kfax.cpp:425
 #: kfax.cpp:425
 msgid "&Flip Page"
 msgstr "&Prevrti ja stranicata"
 
+# kfax.cpp:427
 #: kfax.cpp:427
 msgid "Zoom &in"
 msgstr "&Zgolemi"
 
+# kfax.cpp:428
 #: kfax.cpp:428
 msgid "Zoom &out"
 msgstr "&Smali"
 
+# kfax.cpp:433
 #: kfax.cpp:433
 msgid "&Fax Options"
 msgstr "&Moznosti za faxot"
 
+# kfax.cpp:435
 #: kfax.cpp:435
 msgid "&Tool Bar"
 msgstr "&Greda so alatki"
 
+# kfax.cpp:436
 #: kfax.cpp:436
 msgid "&Status Bar"
 msgstr "&Pozicija"
 
+# kfax.cpp:463
 #: kfax.cpp:463
 msgid "Go back"
 msgstr "Odi nazad"
 
+# kfax.cpp:466
 #: kfax.cpp:466
 msgid "Go forward"
 msgstr "Odi napred"
 
+# kfax.cpp:471
 #: kfax.cpp:471
 msgid "Go to start"
 msgstr "Odi na pochetok"
 
+# kfax.cpp:474
 #: kfax.cpp:474
 msgid "Go to end"
 msgstr "Odi na kraj"
 
+# kfax.cpp:480
 #: kfax.cpp:480
 msgid "Zoom in"
 msgstr "Zgolemi"
 
+# kfax.cpp:483
 #: kfax.cpp:483
 msgid "Zoom out"
 msgstr "Smali"
 
+# kfax.cpp:488
 #: kfax.cpp:488
 msgid "Print document"
 msgstr "Ispechati go dokumentot"
 
+# kfax.cpp:497
 #: kfax.cpp:497
 msgid "Go to page ..."
 msgstr "Odi na stranicata ..."
 
+# kfax.cpp:583
 #: kfax.cpp:583
 msgid "Open Location:"
 msgstr "Otvori ja lokacijata:"
 
+# kfax.cpp:599
 #: kfax.cpp:599
 msgid "You need to open a Fax first"
 msgstr "Morash prvo faksot da go otvorish"
 
+# kfax.cpp:605
 #: kfax.cpp:605
 msgid "Save to Location:"
 msgstr "Memoriraj do lokacijata"
 
+# kfax.cpp:812
 #: kfax.cpp:812
 msgid "Not yet implemented"
 msgstr "Seushte ne e dodadeno"
 
+# kfax.cpp:862
 #: kfax.cpp:862
 msgid "     There is no document active      "
 msgstr " nema aktiven dokument "
 
+# kfax.cpp:996
 #: kfax.cpp:996
 #, c-format
-msgid"Invalid page dimensions:\n"
+msgid ""
+"Invalid page dimensions:\n"
 "Width %.2f Height %.2f\n"
-msgstr "pogreshni dimenzii na stranicata:\n"
+msgstr ""
+"pogreshni dimenzii na stranicata:\n"
 "shirina %.2f Visochina %.2f\n"
 
+# kfax.cpp:1012
 #: kfax.cpp:1012
 #, c-format
 msgid "Can't print to \"%s\"\n"
 msgstr "Nemoze da pechatam do \"%s\"\n"
 
+# kfax.cpp:1023
 #: kfax.cpp:1023
 #, c-format
 msgid "Couldn't create %s\n"
 msgstr "Nemozev da sozdadam %s\n"
 
+# kfax.cpp:1093
 #: kfax.cpp:1093
 msgid "Saving ..."
 msgstr "Se memorira ..."
 
+# kfax.cpp:1100
 #: kfax.cpp:1100
 msgid "Loading ..."
 msgstr "Se otvara ..."
 
+# kfax.cpp:1127 kfax.cpp:1163
 #: kfax.cpp:1127 kfax.cpp:1163
-msgid "Failure in 'copy file()'\n"
+msgid ""
+"Failure in 'copy file()'\n"
 "Couldn't save file!"
-msgstr "Greshka vo 'kopiranje na dosieto()'\n"
+msgstr ""
+"Greshka vo 'kopiranje na dosieto()'\n"
 "nemoze da se memorira dosieto"
 
+# kfax.cpp:1133
 #: kfax.cpp:1133
 msgid "Saved"
 msgstr "Memorirano"
 
+# kfax.cpp:1140 kfax.cpp:1202
 #: kfax.cpp:1140 kfax.cpp:1202
-msgid "KFax is already waiting\n"
+msgid ""
+"KFax is already waiting\n"
 "for an internet job to finish\n"
 "Please wait until has finished\n"
-msgstr "Kfaks ceka"
-"na internet zadacha da se zavrshi\n"
+msgstr ""
+"Kfaks cekana internet zadacha da se zavrshi\n"
 "ve molam chekajte dodeka da zavrshi\n"
 
+# kfax.cpp:1151 kfax.cpp:1215
 #: kfax.cpp:1151 kfax.cpp:1215
 msgid "Could not communicate with KFM"
 msgstr "Nemozev da kumuniciram so KFM"
 
+# kfax.cpp:1192
 #: kfax.cpp:1192
 #, c-format
 msgid "Loading '%s'"
 msgstr "Otvaram '%s'"
 
+# kfax.cpp:1195
 #: kfax.cpp:1195
 msgid "Done"
 msgstr "Zavrsheno"
 
+# kfax.cpp:1209
 #: kfax.cpp:1209
 msgid "Calling KFM"
 msgstr "Vospostavuvam vrska so KFM"
 
+# kfax.cpp:1222
 #: kfax.cpp:1222
 msgid "Starting Job"
 msgstr "Zapochnuvam zadacha"
 
+# kfax.cpp:1225
 #: kfax.cpp:1225
 msgid "Connected"
 msgstr "Povrzano"
 
+# kfax.cpp:1227
 #: kfax.cpp:1227
 msgid "Waiting..."
 msgstr "Chekam ..."
 
+# kfax.cpp:2078
 #: kfax.cpp:2078
 msgid "You need to open a fax page first."
 msgstr "Treba prvo stranicata so faksot da se otvori"
 
+# kfax.cpp:2748
 #: kfax.cpp:2748
-msgid "A file with this name already exists\n"
+msgid ""
+"A file with this name already exists\n"
 "Do you want to overwrite it?\n"
 "\n"
-msgstr "dokument so ova ime vekje postoi"
-"dali sakate da memorirate preku nego?\n"
+msgstr ""
+"dokument so ova ime vekje postoidali sakate da memorirate preku nego?\n"
 "\n"
 
+# print.cpp:51
 #: print.cpp:51
 msgid "KFax Print Dialog"
 msgstr "Kfaks Dialog za pecatacot"
 
+# print.cpp:57
 #: print.cpp:57
 msgid "Print as Postscript to Printer"
 msgstr "Pecati kako postskriptum do pecatacot"
 
+# print.cpp:62
 #: print.cpp:62
 msgid "Print Command:"
 msgstr "Komanda za pecatenje:"
 
+# print.cpp:71
 #: print.cpp:71
 msgid "Print as Postscript to File:"
 msgstr "Pecati kako postskriptum do dokumentot:"
 
+# print.cpp:77
 #: print.cpp:77
 msgid "Browse"
 msgstr "Listaj"
 
+# print.cpp:86
 #: print.cpp:86
 msgid "Page Size:"
 msgstr "Golemina na stranicata"
 
+# print.cpp:105
 #: print.cpp:105
 msgid "Scale fax to page size"
 msgstr "Podesi go faksot so goleminata na stranicata"
 
+# print.cpp:111
 #: print.cpp:111
 msgid "Add Printer Margins (measured in cm):"
 msgstr "Dodadi vrednosti na pecatacot ( vo cm )"
 
+# print.cpp:119
 #: print.cpp:119
 msgid "Horizontal:"
 msgstr "Horizontalno:"
 
+# print.cpp:128
 #: print.cpp:128
 msgid "Vertical:"
 msgstr "Vertikalno:"
 
+# print.cpp:258
 #: print.cpp:258
 msgid "Select Filename"
 msgstr "Izberiime za dokumentot"
 
+# print.cpp:280
 #: print.cpp:280
 msgid "You must enter a file name if you wish to print to a file."
 msgstr "Morash da vnesesh ime za dosieto za da se ispecati vo dosie"
 
+# print.cpp:290
 #: print.cpp:290
 msgid ""
 "You must enter a print command such as \"lpr\"\n"
 " if you wish to print to a printer."
-msgstr "mora da vnesesh komanda za pechatenje kako shto e \"lpr\"\n"
+msgstr ""
+"mora da vnesesh komanda za pechatenje kako shto e \"lpr\"\n"
 "ako sakash da pecatish do pechatachot"
 
+# options.cpp:54
 #: options.cpp:54
 msgid "KFax Options Dialog"
 msgstr "Kfaks dijalog za moznosti "
 
+# options.cpp:64
 #: options.cpp:64
 msgid "Raw Fax Resolution:"
 msgstr "Gruba resolucija za faksot "
 
+# options.cpp:68 options.cpp:149
 #: options.cpp:68 options.cpp:149
 msgid "Auto"
 msgstr "Avtomatski"
 
+# options.cpp:71
 #: options.cpp:71
 msgid "Fine"
 msgstr "Ubavo"
 
+# options.cpp:74
 #: options.cpp:74
 msgid "Normal"
 msgstr "Normalno"
 
+# options.cpp:81
 #: options.cpp:81
 msgid "Display Options:"
 msgstr "Pokazi gi moznostite"
 
+# options.cpp:85
 #: options.cpp:85
 msgid "Landscape"
 msgstr "Pejsazh"
 
+# options.cpp:89
 #: options.cpp:89
 msgid "Upside Down"
 msgstr "Prevrteno"
 
+# options.cpp:93
 #: options.cpp:93
 msgid "Invert"
 msgstr "Svrti"
 
+# options.cpp:102
 #: options.cpp:102
 msgid "Raw Fax Data are:"
 msgstr "Grubi informacii za faksot se:"
 
+# options.cpp:106
 #: options.cpp:106
 msgid "LS-Bit first"
 msgstr "LS-Bit prvo"
 
+# options.cpp:114
 #: options.cpp:114
 msgid "Raw Facsimili are:"
 msgstr "Grubi Facsimili se:"
 
+# options.cpp:135
 #: options.cpp:135
 msgid "Raw Fax width:"
 msgstr "Gruba shirochina na faksot:"
 
+# options.cpp:142
 #: options.cpp:142
 msgid "height:"
 msgstr "visochina"
