--- a/po/fi/kpaint.po
+++ b/po/fi/kpaint.po
@@ -384,51 +384,33 @@ msgid "Image Depth:"
 msgstr "Kuvan syvyys:"
 
 #: depthdialog.cpp:24
-#, fuzzy
 msgid "1 (2 Colours)"
-msgstr "8 (256 väriä)"
+msgstr "1 (2 väriä)"
 
 #: depthdialog.cpp:25
-#, fuzzy
 msgid "4 (16 Colours)"
-msgstr "8 (256 väriä)"
+msgstr "4 (16 väriä)"
 
 #: depthdialog.cpp:26
-#, fuzzy
 msgid "8 (256 Colours)"
 msgstr "8 (256 väriä)"
 
 #: depthdialog.cpp:27
-#, fuzzy
 msgid "15 (32k Colours)"
-msgstr "8 (256 väriä)"
+msgstr "15 (32k väriä)"
 
 #: depthdialog.cpp:28
-#, fuzzy
 msgid "16 (64k Colours)"
-msgstr "8 (256 väriä)"
+msgstr "16 (64k väriä)"
 
 #: depthdialog.cpp:29
 msgid "24 (True Colour)"
 msgstr "24 (Täysväri)"
 
 #: depthdialog.cpp:30
-#, fuzzy
 msgid "32 (True Colour)"
-msgstr "24 (Täysväri)"
+msgstr "32 (Täysväri)"
 
 #: roundangle.cpp:19
 msgid "Roundangle"
 msgstr "Monikulmio"
-
-#~ msgid "Exit"
-#~ msgstr "Lopeta"
-
-#~ msgid "Open Location:"
-#~ msgstr "Avaa sijainti:"
-
-#~ msgid "Save to Location:"
-#~ msgstr "Tallenna sijaintiin:"
-
-#~ msgid "1 (Bitmap)"
-#~ msgstr "1 (bittikartta)"
