--- a/po/sk/kpaint.po
+++ b/po/sk/kpaint.po
@@ -384,51 +384,33 @@ msgid "Image Depth:"
 msgstr "Håbka farby :"
 
 #: depthdialog.cpp:24
-#, fuzzy
 msgid "1 (2 Colours)"
-msgstr "8 (256 Farieb)"
+msgstr "1 (2 Farby)"
 
 #: depthdialog.cpp:25
-#, fuzzy
 msgid "4 (16 Colours)"
-msgstr "8 (256 Farieb)"
+msgstr "4 (16 Farieb)"
 
 #: depthdialog.cpp:26
-#, fuzzy
 msgid "8 (256 Colours)"
 msgstr "8 (256 Farieb)"
 
 #: depthdialog.cpp:27
-#, fuzzy
 msgid "15 (32k Colours)"
-msgstr "8 (256 Farieb)"
+msgstr "15 (32k Farieb)"
 
 #: depthdialog.cpp:28
-#, fuzzy
 msgid "16 (64k Colours)"
-msgstr "8 (256 Farieb)"
+msgstr "16 (64k Farieb)"
 
 #: depthdialog.cpp:29
 msgid "24 (True Colour)"
 msgstr "24 (Verná farba)"
 
 #: depthdialog.cpp:30
-#, fuzzy
 msgid "32 (True Colour)"
-msgstr "24 (Verná farba)"
+msgstr "32 (Verná farba)"
 
 #: roundangle.cpp:19
 msgid "Roundangle"
 msgstr "Zaoblený obdå¾nik"
-
-#~ msgid "Exit"
-#~ msgstr "Ukonèi»"
-
-#~ msgid "Open Location:"
-#~ msgstr "Otvori» miesto:"
-
-#~ msgid "Save to Location:"
-#~ msgstr "Ulo¾i» na miesto:"
-
-#~ msgid "1 (Bitmap)"
-#~ msgstr "1 (Bitmapa)"
