--- a/po/zh_CN.GB2312/kfax.po
+++ b/po/zh_CN.GB2312/kfax.po
@@ -1,7 +1,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: kcmkpanel\n"
-"POT-Creation-Date: 1998-10-30 12:34+0100\n"
+"POT-Creation-Date: 1998-11-03 09:55+0100\n"
 "PO-Revision-Date: 1998-02-21 05:04+0800\n"
 "Last-Translator: Wang Jian <lark@linux.ustc.edu.cn>\n"
 "Language-Team: zh_CN ( gb2312 )\n"
@@ -84,7 +84,7 @@ msgid "Zoom &out"
 msgstr "Àı–°[&O]"
 
 #: kfax.cpp:433
-msgid "&Fax Options"
+msgid "&Fax Options..."
 msgstr ""
 
 #: kfax.cpp:435
@@ -229,6 +229,13 @@ msgid ""
 "A file with this name already exists\n"
 "Do you want to overwrite it?\n"
 "\n"
+msgstr ""
+
+#: faxinput.cpp:111
+#, c-format
+msgid ""
+"Unable to open:\n"
+"%s\n"
 msgstr ""
 
 #: print.cpp:51
