--- a/po/ko/kpaint.po
+++ b/po/ko/kpaint.po
@@ -6,7 +6,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
-"POT-Creation-Date: 1998-06-18 22:44+0200\n"
+"POT-Creation-Date: 1998-11-08 02:03+0100\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: LinuxKorea Co. <kde@linuxkorea.co.kr>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -14,65 +14,221 @@ msgstr ""
 "Content-Type: text/plain; charset=iso-8859-1\n"
 "Content-Transfer-Encoding: 8BIT\n"
 
-#: app.cpp:45
+#: kpaint.cpp:76 kpaint.cpp:751
+msgid "untitled.gif"
+msgstr "untitled.gif"
+
+#: kpaint.cpp:172
+msgid "Unsaved Changes"
+msgstr "변경사항 저장안함"
+
+#: kpaint.cpp:173
 msgid ""
-"\n"
-"(c) Richard J. Moore 1997 Released under GPL see LICENSE for details\n"
+"You have unsaved changes, you will loose them if you close this window now."
+msgstr ""
+"변경사항을 저장하지 않습니다. 지금 윈도우를 닫으면 작업한 내용을 잃게 됩니다."
+
+#: kpaint.cpp:210
+msgid "New Canvas"
+msgstr "새 그림판"
+
+#: kpaint.cpp:213
+msgid "Open File"
+msgstr "파일 열기"
+
+#: kpaint.cpp:216
+msgid "Save File"
+msgstr "파일 저장"
+
+#: kpaint.cpp:230 kpaint.cpp:450
+msgid "Zoom In"
+msgstr "확대"
+
+#: kpaint.cpp:233 kpaint.cpp:451
+msgid "Zoom Out"
+msgstr "축소"
+
+#: kpaint.cpp:430
+msgid "Open Image..."
+msgstr "이미지 열기..."
+
+#: kpaint.cpp:431
+msgid "New Image..."
+msgstr "새 이미지..."
+
+#: kpaint.cpp:432
+msgid "Save Image"
+msgstr "이미지 저장"
+
+#: kpaint.cpp:433
+msgid "Save Image As..."
+msgstr "다른 이름으로 저장..."
+
+#: kpaint.cpp:434
+msgid "Image Format..."
+msgstr "이미지 포맷..."
+
+#: kpaint.cpp:436
+msgid "Open from URL..."
+msgstr "URL 열기..."
+
+#: kpaint.cpp:437
+msgid "Save to URL..."
+msgstr "URL로 저장..."
+
+#: kpaint.cpp:439
+msgid "New Window"
+msgstr "새 윈도우"
+
+#: kpaint.cpp:440
+msgid "Close Window"
+msgstr "윈도우 닫기"
+
+#: kpaint.cpp:445
+msgid "Copy Region"
+msgstr "영역 복사"
+
+#: kpaint.cpp:446
+msgid "Cut Region"
+msgstr "영역 자르기"
+
+#: kpaint.cpp:447
+msgid "Paste Region"
+msgstr "영역 붙이기"
+
+#: kpaint.cpp:448
+msgid "Paste As Image"
+msgstr "이미지로 붙이기"
+
+#: kpaint.cpp:452
+msgid "Mask..."
+msgstr "마스크..."
+
+#: kpaint.cpp:455
+msgid "Information..."
+msgstr "정보..."
+
+#: kpaint.cpp:456
+msgid "Resize..."
+msgstr "크기조절..."
+
+#: kpaint.cpp:457
+msgid "Edit Palette..."
+msgstr "팔레트 편집..."
+
+#: kpaint.cpp:458
+msgid "Change Colour Depth..."
+msgstr "색상 수 변경..."
+
+#: kpaint.cpp:461
+msgid "Tool Properties..."
+msgstr "도구 등록정보..."
+
+#: kpaint.cpp:482
+msgid "Show Tools Toolbar"
+msgstr "도구 툴바 보이기"
+
+#: kpaint.cpp:483
+msgid "Show Commands Toolbar"
+msgstr "명령 툴바 보이기"
+
+#: kpaint.cpp:484
+msgid "Show Status Bar"
+msgstr "상태 바 보이기"
+
+#: kpaint.cpp:485
+msgid "Save Options"
+msgstr "옵션 저장"
+
+#: kpaint.cpp:494
+msgid "KPaint"
+msgstr "KPaint"
+
+#: kpaint.cpp:495
+msgid " version "
+msgstr ""
+
+#: kpaint.cpp:496
+#, fuzzy
+msgid "(c) "
 msgstr ""
 "\n"
-"(c) Richard J. Moore 1997 GPL에 의거 배포. 자세한 내용은 LICENSE 파일을 참조하십시오\n"
+"\n"
+"(c) "
 
-#: app.cpp:46
-msgid "Usage: "
-msgstr "사용법: "
+#: kpaint.cpp:505
+msgid "&Image"
+msgstr "이미지(&I)"
 
-#: app.cpp:48
-msgid " [url | filename]\n"
-msgstr " [url | 파일이름]\n"
+#: kpaint.cpp:506
+msgid "&Tool"
+msgstr "도구(&T)"
 
-#: areaselect.cpp:17
-msgid "Area Selection"
-msgstr "영역 선택"
+#: kpaint.cpp:681
+msgid "KPaint: Could not open file"
+msgstr "KPaint: 파일을 열 수 없음"
 
-#: canvassize.cpp:16
-msgid "Canvas Size"
-msgstr "그림판 크기"
+#: kpaint.cpp:682
+msgid ""
+"Error: Could not open file\n"
+"KPaint could not open the specified file."
+msgstr ""
+"오류: 파일을 열 수 없음\n"
+"KPaint가 지정하신 파일을 열 수 없습니다."
 
-#: canvassize.cpp:25
-msgid "Width:"
-msgstr "넓이:"
+#: kpaint.cpp:690
+msgid "KPaint: Unknown Format"
+msgstr "KPaint: 알 수 없는 포맷"
 
-#: canvassize.cpp:26
-msgid "Height:"
-msgstr "높이:"
+#: kpaint.cpp:691
+msgid ""
+"Error: Unknown Format\n"
+"KPaint does not understand the format of the specified file\n"
+"or the file is corrupt."
+msgstr ""
+"오류: 알 수 없는 포맷\n"
+"KPaint가 지정한 파일의 포맷을 이해하지 못하거나\n"
+"파일이 손상되었습니다."
 
-#: circle.cpp:18 kpaint.cpp:349
-msgid "Circle"
-msgstr "원"
-
-#: depthdialog.cpp:18
-msgid "Image Depth:"
-msgstr "이미지 색:"
-
-#: depthdialog.cpp:24
-msgid "1 (Bitmap)"
-msgstr "1 (비트맵)"
-
-#: depthdialog.cpp:25
-msgid "8 (256 Colour)"
-msgstr "8 (256 색)"
-
-#: depthdialog.cpp:26
-msgid "24 (True Colour)"
-msgstr "24 (트루 칼라)"
-
-#: ellipse.cpp:16 kpaint.cpp:348
+#: ellipse.cpp:16 ellipse.cpp:23 manager.cpp:65
 msgid "Ellipse"
 msgstr "타원"
 
-#: formatdialog.cpp:21
-msgid "File Format:"
-msgstr "파일 포맷"
+#: circle.cpp:18 circle.cpp:25 manager.cpp:67
+msgid "Circle"
+msgstr "원"
+
+#: manager.cpp:69 pen.cpp:17
+msgid "Pen"
+msgstr "곡선"
+
+#: line.cpp:19 manager.cpp:71
+msgid "Line"
+msgstr "선"
+
+#: manager.cpp:73 rectangle.cpp:17
+msgid "Rectangle"
+msgstr "사각형"
+
+#: manager.cpp:75
+msgid "Round Angle"
+msgstr "둥근 사각형"
+
+#: manager.cpp:77 spraycan.cpp:19
+msgid "Spray Can"
+msgstr "스프레이"
+
+#: manager.cpp:79
+msgid "Text"
+msgstr ""
+
+#: manager.cpp:81
+msgid "Area Select"
+msgstr "영역 선택"
+
+#: manager.cpp:88
+msgid "Tool Properties"
+msgstr "도구 등록정보"
 
 #: infodialog.cpp:24
 msgid "Colour Depth:"
@@ -90,223 +246,29 @@ msgstr "이미지 넓이:"
 msgid "Image Height:"
 msgstr "이미지 높이:"
 
-#: kpaint.cpp:52 kpaint.cpp:603
-msgid "untitled.gif"
-msgstr "untitled.gif"
-
-#: kpaint.cpp:124
-msgid "Unsaved Changes"
-msgstr "변경사항 저장안함"
-
-#: kpaint.cpp:125
-msgid ""
-"You have unsaved changes, you will loose them if you close this window now."
+#: infodialog.cpp:94 palettedialog.cpp:14
+msgid "Dismiss"
 msgstr ""
-"변경사항을 저장하지 않습니다. 지금 윈도우를 닫으면 작업한 내용을 잃게 됩니다."
-
-#: kpaint.cpp:160
-msgid "New Canvas"
-msgstr "새 그림판"
-
-#: kpaint.cpp:163
-msgid "Open File"
-msgstr "파일 열기"
-
-#: kpaint.cpp:166
-msgid "Save File"
-msgstr "파일 저장"
-
-#: kpaint.cpp:180 kpaint.cpp:332
-msgid "Zoom In"
-msgstr "확대"
-
-#: kpaint.cpp:183 kpaint.cpp:333
-msgid "Zoom Out"
-msgstr "축소"
-
-#: kpaint.cpp:312
-msgid "Open Image..."
-msgstr "이미지 열기..."
-
-#: kpaint.cpp:313
-msgid "New Image..."
-msgstr "새 이미지..."
-
-#: kpaint.cpp:314
-msgid "Save Image"
-msgstr "이미지 저장"
-
-#: kpaint.cpp:315
-msgid "Save Image As..."
-msgstr "다른 이름으로 저장..."
-
-#: kpaint.cpp:316
-msgid "Image Format..."
-msgstr "이미지 포맷..."
-
-#: kpaint.cpp:318
-msgid "Open from URL..."
-msgstr "URL 열기..."
-
-#: kpaint.cpp:319
-msgid "Save to URL..."
-msgstr "URL로 저장..."
-
-#: kpaint.cpp:321
-msgid "New Window"
-msgstr "새 윈도우"
-
-#: kpaint.cpp:322
-msgid "Close Window"
-msgstr "윈도우 닫기"
-
-#: kpaint.cpp:324
-msgid "Exit"
-msgstr "나가기"
-
-#: kpaint.cpp:327
-msgid "Copy Region"
-msgstr "영역 복사"
-
-#: kpaint.cpp:328
-msgid "Cut Region"
-msgstr "영역 자르기"
-
-#: kpaint.cpp:329
-msgid "Paste Region"
-msgstr "영역 붙이기"
-
-#: kpaint.cpp:330
-msgid "Paste As Image"
-msgstr "이미지로 붙이기"
-
-#: kpaint.cpp:334
-msgid "Mask..."
-msgstr "마스크..."
-
-#: kpaint.cpp:337
-msgid "Information..."
-msgstr "정보..."
-
-#: kpaint.cpp:338
-msgid "Resize..."
-msgstr "크기조절..."
-
-#: kpaint.cpp:339
-msgid "Edit Palette..."
-msgstr "팔레트 편집..."
-
-#: kpaint.cpp:340
-msgid "Change Colour Depth..."
-msgstr "색상 수 변경..."
-
-#: kpaint.cpp:343
-msgid "Tool Properties..."
-msgstr "도구 등록정보..."
-
-#: kpaint.cpp:345 pen.cpp:17
-msgid "Pen"
-msgstr "곡선"
-
-#: kpaint.cpp:346 line.cpp:19
-msgid "Line"
-msgstr "선"
-
-#: kpaint.cpp:347 rectangle.cpp:17
-msgid "Rectangle"
-msgstr "사각형"
-
-#: kpaint.cpp:350 spraycan.cpp:19
-msgid "Spray Can"
-msgstr "스프레이"
-
-#: kpaint.cpp:351
-msgid "Area Select"
-msgstr "영역 선택"
-
-#: kpaint.cpp:352
-msgid "Round Angle"
-msgstr "둥근 사각형"
-
-#: kpaint.cpp:357
-msgid "Show Tools Toolbar"
-msgstr "도구 툴바 보이기"
-
-#: kpaint.cpp:358
-msgid "Show Commands Toolbar"
-msgstr "명령 툴바 보이기"
-
-#: kpaint.cpp:359
-msgid "Show Status Bar"
-msgstr "상태 바 보이기"
-
-#: kpaint.cpp:360
-msgid "Save Options"
-msgstr "옵션 저장"
-
-#: kpaint.cpp:369
-msgid "KPaint"
-msgstr "KPaint"
-
-#: kpaint.cpp:371
-msgid ""
-"\n"
-"\n"
-"(c) "
-msgstr ""
-"\n"
-"\n"
-"(c) "
-
-#: kpaint.cpp:380
-msgid "&Image"
-msgstr "이미지(&I)"
-
-#: kpaint.cpp:381
-msgid "&Tool"
-msgstr "도구(&T)"
-
-#: kpaint.cpp:533
-msgid "KPaint: Could not open file"
-msgstr "KPaint: 파일을 열 수 없음"
-
-#: kpaint.cpp:534
-msgid ""
-"Error: Could not open file\n"
-"KPaint could not open the specified file."
-msgstr ""
-"오류: 파일을 열 수 없음\n"
-"KPaint가 지정하신 파일을 열 수 없습니다."
-
-#: kpaint.cpp:542
-msgid "KPaint: Unknown Format"
-msgstr "KPaint: 알 수 없는 포맷"
-
-#: kpaint.cpp:543
-msgid ""
-"Error: Unknown Format\n"
-"KPaint does not understand the format of the specified file\n"
-"or the file is corrupt."
-msgstr ""
-"오류: 알 수 없는 포맷\n"
-"KPaint가 지정한 파일의 포맷을 이해하지 못하거나\n"
-"파일이 손상되었습니다."
-
-#: kpaint.cpp:745
-msgid "Open Location:"
-msgstr "위치 열기:"
-
-#: kpaint.cpp:769
-msgid "Save to Location:"
-msgstr "위치 저장:"
-
-#: manager.cpp:69
-msgid "Tool Properties"
-msgstr "도구 등록정보"
 
 #: palette.cpp:100
 msgid "Edit Colour"
 msgstr "색 편집"
+
+#: formatdialog.cpp:29
+msgid "File Format:"
+msgstr "파일 포맷"
+
+#: canvassize.cpp:16
+msgid "Canvas Size"
+msgstr "그림판 크기"
+
+#: canvassize.cpp:25
+msgid "Width:"
+msgstr "넓이:"
+
+#: canvassize.cpp:26
+msgid "Height:"
+msgstr "높이:"
 
 #: properties.cpp:21
 msgid "Line Properties"
@@ -319,6 +281,10 @@ msgstr "채우기 등록정보"
 #: properties.cpp:70 properties.cpp:125
 msgid "Fill Pattern:"
 msgstr "채우기 패턴:"
+
+#: properties.cpp:76 properties.cpp:130 properties.cpp:293 properties.cpp:353
+msgid "None"
+msgstr ""
 
 #: properties.cpp:77 properties.cpp:131 properties.cpp:288 properties.cpp:348
 msgid "Solid"
@@ -400,6 +366,74 @@ msgstr "연결 스타일:"
 msgid "Set Line Colour..."
 msgstr "선 색 설정..."
 
+#: areaselect.cpp:20
+msgid "Area Selection"
+msgstr "영역 선택"
+
+#: depthdialog.cpp:18
+msgid "Image Depth:"
+msgstr "이미지 색:"
+
+#: depthdialog.cpp:24
+#, fuzzy
+msgid "1 (2 Colours)"
+msgstr "8 (256 색)"
+
+#: depthdialog.cpp:25
+#, fuzzy
+msgid "4 (16 Colours)"
+msgstr "8 (256 색)"
+
+#: depthdialog.cpp:26
+#, fuzzy
+msgid "8 (256 Colours)"
+msgstr "8 (256 색)"
+
+#: depthdialog.cpp:27
+#, fuzzy
+msgid "15 (32k Colours)"
+msgstr "8 (256 색)"
+
+#: depthdialog.cpp:28
+#, fuzzy
+msgid "16 (64k Colours)"
+msgstr "8 (256 색)"
+
+#: depthdialog.cpp:29
+msgid "24 (True Colour)"
+msgstr "24 (트루 칼라)"
+
+#: depthdialog.cpp:30
+#, fuzzy
+msgid "32 (True Colour)"
+msgstr "24 (트루 칼라)"
+
 #: roundangle.cpp:19
 msgid "Roundangle"
 msgstr "둥근 사각형"
+
+#~ msgid ""
+#~ "\n"
+#~ "(c) Richard J. Moore 1997 Released under GPL see LICENSE for details\n"
+#~ msgstr ""
+#~ "\n"
+#~ "(c) Richard J. Moore 1997 GPL에 의거 배포. 자세한 내용은 LICENSE 파일을 "
+#~ "참조하십시오\n"
+
+#~ msgid "Usage: "
+#~ msgstr "사용법: "
+
+#~ msgid " [url | filename]\n"
+#~ msgstr " [url | 파일이름]\n"
+
+#~ msgid "1 (Bitmap)"
+#~ msgstr "1 (비트맵)"
+
+#~ msgid "Exit"
+#~ msgstr "나가기"
+
+#~ msgid "Open Location:"
+#~ msgstr "위치 열기:"
+
+#~ msgid "Save to Location:"
+#~ msgstr "위치 저장:"
