--- a/configure.in.1
+++ b/configure.in.1
@@ -45,9 +45,7 @@ dnl Image readers/writers
 AC_FIND_GIF
 AC_FIND_JPEG
 AC_FIND_TIFF
-KDE_CHECK_KIMGIO dnl this should make the next two lines obsolete
-KIMGIO_LIBS="\$(LIBJPEG) \$(LIBTIFF) \$(LIBPNG)"
-AC_SUBST(KIMGIO_LIBS)
+KDE_CHECK_KIMGIO
 
 dnl Checks for header files.
 AC_HEADER_DIRENT
